[package]
name = "Acdis"
version = "0.1.0"
edition = "2021"

[dependencies]
ractor = "0.14.2"
tokio = {version = "1.41.1", features = ["rt-multi-thread"]}
log = "0.4.22"
simplelog = "^0.12.0"
redis-protocol = { version = "6.0.0", features = ["bytes"] }
redis-protocol-bridge = { git = "https://github.com/NilsDeckert/redis-protocol-bridge"}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "ractor_message_passing"
harness = false

[[bench]]
name = "rust_channels"
harness = false

[[bench]]
name = "spawn"
harness = false

[[bench]]
name = "messages"
harness = false
