[package]
name = "Acdis"
version = "0.1.0"
edition = "2021"

[env]
CLUSTER_HOST="localhost"
CLUSTER_PORT="6381"
CLUSTER_COOKIE="cookie"

[dependencies]
ractor = { version = "0.14.7", features = ["async-trait", "cluster", "blanket_serde"] }
ractor_cluster = { version = "0.14.7", features = ["async-trait"] }
tokio = {version = "1.41.1", features = ["rt-multi-thread", "signal"]}
log = "0.4.22"
simplelog = "^0.12.0"
redis-protocol = { version = "6.0.0", features = ["bytes"] }
redis-protocol-bridge = { git = "https://github.com/NilsDeckert/redis-protocol-bridge", features = ["serde"] }
futures = "0.3.31"
fxhash = "=0.2.1"
gethostname = "0.5"
async-trait = "0.1.85"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[profile.release]
codegen-units = 1
lto = "fat"

[[bench]]
name = "ractor_message_passing"
harness = false

[[bench]]
name = "rust_channels"
harness = false

[[bench]]
name = "spawn"
harness = false

[[bench]]
name = "messages"
harness = false
